--- a/app/src/main/res/layout/activity_stream.xml
+++ b/app/src/main/res/layout/activity_stream.xml
@@ -9,8 +9,17 @@
     tools:context="com.example.ranter.app.StreamActivity">
 
     <TextView
+        android:id="@+id/header"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:id="@+id/list"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/header"
+        android:layout_marginTop="20dp">
+
+    </ListView>
 </RelativeLayout>
